@@ -1038,7 +1038,8 @@ nuttx-0.3.12 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Moved all FAT related files from fs to fs/fat
 	* Implemented mkfatfs(), a non-standard API to create a FAT filesystem on a
 	  block device (not yet tested).
-	* Added a test for mkfatfs() on a RAM disk in examples/mount
+	* Added a test for mkfatfs() on a RAM disk in examples/mount and verified
+	  basic mkfatfs functionality for FAT12.
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
