@@ -389,5 +389,6 @@
 	* Moved all FAT related files from fs to fs/fat
 	* Implemented mkfatfs(), a non-standard API to create a FAT filesystem on a
 	  block device (not yet tested).
-	* Added a test for mkfatfs() on a RAM disk in examples/mount
+	* Added a test for mkfatfs() on a RAM disk in examples/mount and verified
+	  basic mkfatfs functionality for FAT12.
 
